update UI for owner page

--- a/stadium/book_stadium/templates/book_stadium/base.html
+++ b/stadium/book_stadium/templates/book_stadium/base.html
@@ -30,7 +30,7 @@
         <div class="navbar">
             <div class="logo">
                 <a class="logo" href="{% url 'book_stadium' %}"><img src="{% static 'images/ball.png' %}" alt=""></a>
-                <a href="{% url 'book_stadium' %}">Home</a>
+                <a href="{% url 'book_stadium' %}">Trang chủ</a>
             </div>
 
             <ul>
