--- a/stadium/book_stadium/templates/book_stadium/book_stadium.html
+++ b/stadium/book_stadium/templates/book_stadium/book_stadium.html
@@ -65,10 +65,9 @@
                 {% endfor %}
 
             {% else %}
-                <!-- <h1 id="title">Các sân và khung giờ còn trống</h1> -->
                 <div class="search shadow">
                     <form id="search-form" method="GET" action="">
-                        <div class="form-style">
+                        <div class="search-form-style">
                             <div class="form-group">
                                 <label for="stadium-name-search">Tên sân </label>
                                 <input type="text" name="stadium-name-search" class="form-control" id="stadium-name-search" placeholder="Tên sân" value="">
@@ -88,11 +87,12 @@
                                 {{ order_form.time_frame|as_crispy_field }}
                             </div>
                         </div>
-                        <div class="submit-btn">
+                        <div class="search-btn">
                             <button type="submit" class="btn btn-secondary mt-3 mb-3">Tìm kiếm</button>
                         </div>
                     </form>
                 </div>
+                <h1 id="title">Các sân và khung giờ còn trống</h1>
                 {% for stadium in page_obj %}
                     <div class="day shadow">
                         <h2>Ngày: {{ stadium.ngay }}</h2>
@@ -102,33 +102,17 @@
                                 <h3>{{ key }}</h3>
                                 <div class="list-of-stadium">
                                     {% for stadiumInfor in stadiumTimeframe %}
-                                        <div class="card shadow style" style="width: 18rem;">
-                                            <div class="hover-img">
-                                                <img class="card-img-top" src="{{ stadiumInfor.anh }}" alt="Card image cap">
-                                                <div class="book-stadium-btn">
-                                                    <div class="card-body">
-                                                        <p class="card-text">Tên: {{ stadiumInfor.ten }}</p>
-                                                        <hr>
-                                                        <p class="card-text">Địa chỉ: {{ stadiumInfor.dia_chi }}</p>
-                                                        <hr>
-                                                    </div>
-
-                                                    <button id="order-btn" class="order-btn" stadium-name="{{ stadiumInfor.ten }}" user-name="{{ user.username }}" user-phone-number="{{ user.phone_number }}" time-frame="{{ stadiumInfor.khung_gio_dat }}" onclick="">Đặt sân</button>
-
+                                        <div class="stadiums shadow">
+                                            <img class="card-img-top" src="{{ stadiumInfor.anh }}" alt="Card image cap">
+                                            <div class="stadium-infor">
+                                                <p class="card-text">Tên: {{ stadiumInfor.ten }}</p>
+                                                <p class="card-text">Địa chỉ: {{ stadiumInfor.dia_chi }}</p>
+                                                <p class="card-text">Số điện thoại: {{ stadiumInfor.sdt }}</p>
+                                                <button id="order-btn" class="order-btn" stadium-name="{{ stadiumInfor.ten }}" user-name="{{ user.username }}" user-phone-number="{{ user.phone_number }}" time-frame="{{ stadiumInfor.khung_gio_dat }}" onclick="">Đặt sân</button>
+                                                <div class="stadium-detail">
+                                                    <a id="stadium-detail" href="{% url 'stadium_detail' stadiumInfor.id %}">Chi tiết...</a>
                                                 </div>
                                             </div>
-                                            <div class="card-body">
-                                            <p class="card-text">Tên: {{ stadiumInfor.ten }}</p>
-                                            <hr>
-                                            <p class="card-text">Địa chỉ: {{ stadiumInfor.dia_chi }}</p>
-                                            <hr>
-                                            <p class="card-text">Số điện thoại: {{ stadiumInfor.sdt }}</p>
-                                            <hr>
-                                            </div>
-                                            <button>
-                                                <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
-                                                <a href="{% url 'stadium_detail' stadiumInfor.id %}">Chi tiết</a>
-                                            </button>
                                         </div>
                                     {% endfor %}
                                 </div>
@@ -213,23 +197,16 @@
                 </div>
                 <div class="modal-body background">
                     <div class="form-order">
-                        <div id="dropdown-btn" class="dropdown search dropdown-style">
-                            <div id="dropdown-form" class="order-show" >
-                                <form method="POST" action="">
-                                    {% csrf_token %}
-                                    <div class="form-style">
-                                        {{order_form|crispy}}
-                                            <div class="submit-btn">
-                                                <button type="submit" class="btn btn-secondary mt-3">Đặt</button>
-                                            </div>
+                        <form method="POST" action="">
+                            {% csrf_token %}
+                            <div class="form-style">
+                                {{order_form|crispy}}
+                                    <div class="submit-btn">
+                                        <button type="submit" class="btn btn-secondary mt-3">Đặt</button>
                                     </div>
-                                </form>
                             </div>
-                        </div>
+                        </form>
                     </div>
-                </div>
-                <div class="modal-footer book_stadium">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Đóng</button>
                 </div>
             </div>
         </div>
