update UI for search page

--- a/stadium/book_stadium/templates/book_stadium/book_stadium.html
+++ b/stadium/book_stadium/templates/book_stadium/book_stadium.html
@@ -188,7 +188,7 @@
                             <div class="form-style">
                                 {{order_form|crispy}}
                                     <div class="submit-btn">
-                                        <button type="submit" class="btn btn-secondary mt-3">Đặt</button>
+                                        <button type="submit" class="btn mt-3">Đặt</button>
                                     </div>
                             </div>
                         </form>
