--- a/stadium/book_stadium/templates/book_stadium/search_stadium.html
+++ b/stadium/book_stadium/templates/book_stadium/search_stadium.html
@@ -124,45 +124,6 @@
             {% endif %}
 
         </div>
-        <!-- <div class="form-submit">
-            <div class="form-search">
-                <div class="dropdown search dropdown-style">
-                    <button class="btn btn-secondary search-btn-dropdown" type="button" id="dropdownMenuButton">
-                        <a>Tìm kiếm</a>
-                        <span class="fas fa-caret-down first"></span>
-                    </button>
-                    <div class="search-show shadow" aria-labelledby="dropdownMenuButton">
-                        <form method="GET" action="">
-                            <div class="form-style">
-
-                                <div class="form-group">
-                                    <label for="stadium-name-search">Tên sân </label>
-                                    <input type="text" name="stadium-name-search" class="form-control" id="stadium-name-search" placeholder="Tên sân" value="">
-                                </div>
-
-                                <div class="form-group">
-                                    <label for="address">Địa chỉ</label>
-                                    <input type="text" name="address-search" class="form-control" id="address" placeholder="Địa chỉ" value="">
-                                </div>
-
-                                <div class="form-group">
-                                    <label for="day">Ngày</label>
-                                    <input type="text" name="day-search" class="form-control" id="day" placeholder="Nhập ngày" value="{{page_obj.0.ngay}}">
-                                </div>
-
-                                <div class="form-group">
-                                    {{ order_form.time_frame|as_crispy_field }}
-                                </div>
-
-                                <div class="submit-btn">
-                                    <button type="submit" class="btn btn-secondary mt-3 mb-3">Tìm kiếm</button>
-                                </div>
-                            </div>
-                        </form>
-                    </div>
-                </div>
-            </div>
-        </div> -->
     </div>
 
     <div class="modal fade " id="notification-success" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
@@ -214,23 +175,16 @@
                 </div>
                 <div class="modal-body background">
                     <div class="form-order">
-                        <div id="dropdown-btn" class="dropdown search dropdown-style">
-                            <div id="dropdown-form" class="order-show" >
-                                <form method="POST" action="">
-                                    {% csrf_token %}
-                                    <div class="form-style">
-                                        {{order_form|crispy}}
-                                            <div class="submit-btn">
-                                                <button type="submit" class="btn btn-secondary mt-3">Đặt</button>
-                                            </div>
-                                    </div>
-                                </form>
+                        <form method="POST" action="">
+                            {% csrf_token %}
+                            <div class="form-style">
+                                {{order_form|crispy}}
+                                <div class="submit-btn">
+                                    <button type="submit" class="btn mt-3">Đặt</button>
+                                </div>
                             </div>
-                        </div>
+                        </form>
                     </div>
-                </div>
-                <div class="modal-footer book_stadium">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Đóng</button>
                 </div>
             </div>
         </div>
