--- a/stadium/static/css/book_stadium.css
+++ b/stadium/static/css/book_stadium.css
@@ -23,6 +23,7 @@
     flex-direction: column;
     padding: 5%;
     background-color: #e4e3e3;
+    margin-top: 2%;
 }
 
 .list-of-stadium {
@@ -51,7 +52,7 @@
 }
 
 #title {
-    text-align: start;
+    text-align: center;
     margin-bottom: 3%;
 }
 
@@ -138,4 +139,5 @@ button#order-btn {
 
 .submit-btn button {
     background: #2c3e50;
+    color: white;
 }
