--- a/stadium/book_stadium/templates/book_stadium/owner.html
+++ b/stadium/book_stadium/templates/book_stadium/owner.html
@@ -44,7 +44,7 @@
                 <th scope="col">Đặt áo tập</th>
                 <th scope="cole">Vị trí sân</th>
                 <th scope="col">Loại sân</th>
-                <th scope="col">Trạng th</th>
+                <th scope="col">Trạng thái</th>
 
             </tr>
         </thead>
