--- a/stadium/static/css/base.css
+++ b/stadium/static/css/base.css
@@ -55,7 +55,7 @@ header {
 
 .modal-header.base {
     width: 100%;
-    background-color: #555;
+    background-color: #2c3e50;
     color: white;
 }
 
@@ -66,7 +66,7 @@ header {
 
 a {
     text-decoration: none;
-    color: #6c757d;
+    color: #2c3e50;
 }
 
 a:hover {
@@ -134,8 +134,9 @@ section {
     position: relative;
 }
 
-.sidebar ul ul {
-    /* display: none; */
+.login-btn {
+    background-color:#2c3e50;
+    color: #ffffff;
 }
 
 .sidebar ul ul li a {
